<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
    <name>interoperability</name>
    <version>0.0.0</version>
    <description>
        Bridge for communication between ROS and JAUS
    </description>
    <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>robot_localization</depend>
    <depend>fake_planner</depend>
    <depend>waypoint_server</depend>

    <export>
        <ros2jaus_bridge plugin="${prefix}/bridge_plugins.xml" />
    </export>
</package>